--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -6,7 +6,8 @@ body {
 #navBar {
   width: 100%;
   height: 80px;
-  background-color: blue;
+  background-color: #009dad;
+  position: fixed;
 }
 
 #navBarLeft {
@@ -23,10 +24,16 @@ body {
 
 #navBarRight ul{
   list-style-type: none;
+  color: white;
 }
 
 #navBarRight li{
   display: inline;
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
+  padding: 5px;
+}
+
+#navBarRight a {
+  text-decoration: none;
 }
