--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -5,35 +5,49 @@ body {
 
 #navBar {
   width: 100%;
-  height: 80px;
-  background-color: #009dad;
+  height: 70px;
+  background-color: #4CBAC5;
   position: fixed;
 }
 
 #navBarLeft {
   width: 50%;
-  height: 80px;
   float: left;
+}
+
+#navBarLeft li{
+  display: inline;
+  font-size: 27px;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  padding-right: 8px;
+  margin-bottom: 50px;
 }
 
 #navBarRight {
   width: 50%;
-  height: 80px;
   float: right;
 }
 
 #navBarRight ul{
   list-style-type: none;
   color: white;
+  text-align: center;
+  padding-top: 7px;
 }
 
 #navBarRight li{
   display: inline;
-  font-size: 20px;
+  font-size: 18px;
   font-family: 'Open Sans', sans-serif;
-  padding: 5px;
+  padding-right: 8px;
 }
 
 #navBarRight a {
   text-decoration: none;
+  color: inherit;
+}
+
+#navBarRight a:hover {
+  color: #009dad;
 }
