--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -48,10 +48,6 @@ body {
   color: inherit;
 }
 
-#navBarRight a:hover, a:hover {
+#navBarRight a:hover {
   color: #009dad;
 }
-/*
-#navBarRight a:active {
-  color: #009dad;
-}*/
