--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -13,6 +13,7 @@ body {
 #navBarLeft {
   width: 50%;
   float: left;
+  margin-top: 15px;
 }
 
 #navBarLeft li{
@@ -20,8 +21,6 @@ body {
   font-size: 27px;
   font-family: 'Open Sans', sans-serif;
   color: white;
-  padding-right: 8px;
-  margin-bottom: 50px;
 }
 
 #navBarRight {
@@ -33,14 +32,14 @@ body {
   list-style-type: none;
   color: white;
   text-align: center;
-  padding-top: 7px;
+  padding-top: 21px;
 }
 
 #navBarRight li{
   display: inline;
   font-size: 18px;
   font-family: 'Open Sans', sans-serif;
-  padding-right: 8px;
+  padding-right: 20px;
 }
 
 #navBarRight a {
