--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -7,7 +7,7 @@ body {
   width: 100%;
   height: 70px;
   background-color: #4CBAC5;
-  position: fixed;
+  /*position: fixed;*/
 }
 
 #navBarLeft {
@@ -68,8 +68,15 @@ body {
   color: #009dad !important;
 }
 
+section {
+  margin-top: 70px;
+  height: 300px;
+  background-color: red;
+}
+
 footer {
-  display: block;
+  height: 300px;
+  background-color: green;
 }
 
 footer p {
