--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -70,16 +70,17 @@ body {
 
 section {
   margin-top: 70px;
-  height: 300px;
-  background-color: red;
+  height: 600px;
+  background-color: white;
 }
 
 footer {
-  height: 300px;
-  background-color: green;
+  height: 75px;
+  background-color: white;
 }
 
 footer p {
   font-family: 'Open Sans', sans-serif;
+  text-align: center;
   color: #009dad !important;
 }
