--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -1,6 +1,21 @@
-body {
+body, html {
+  height: 100%;
   padding: 0;
   margin: 0;
+}
+
+.page-wrap {
+  min-height: 100%;
+  margin-bottom: -155px;
+  padding: 0;
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+footer, .page-wrap:after {
+  height: 155px;
 }
 
 #navBar {
@@ -69,12 +84,11 @@ body {
 
 section {
   margin-top: 70px;
-  height: 600px;
   background-color: white;
 }
 
 footer {
-  height: 75px;
+  padding-top: 20px;
   background-color: white;
 }
 
@@ -82,4 +96,5 @@ footer p {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   color: #009dad !important;
+  margin: 0;
 }
