--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -91,7 +91,7 @@ section {
   padding: 10px;
 }
 
-#homeContent h2 {
+#homeContent h2, h4 {
   font-family: 'Trebuchet MS', sans-serif;
   text-align: center;
 }
