--- a/app/CSS/index.css
+++ b/app/CSS/index.css
@@ -96,6 +96,16 @@ section {
   text-align: center;
 }
 
+.bitOfPaddingAbout {
+  padding: 20px;
+}
+
+#aboutUs p {
+  text-align: center;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+}
+
 footer {
   padding-top: 20px;
   background-color: white;
